<resources>
    <string name="app_name">Coffee Plant Disease Diagnosis</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="btn_next">Next</string>
    <string name="welcome_screen_image">Welcome Screen Image</string>
    <string name="coffee_plant_disease_diagnosis">Coffee Plant Disease Diagnosis</string>
    <string name="img_home_banner">Steps of Coffee Plant Diagnosis</string>
    <string name="img_scan_icon">Icon for Scan</string>
    <string name="img_google_map_icon">Google Map Icon</string>
    <string name="img_blog_icon">Blog Icon</string>
    <string name="scan">Predict Disease</string>
    <string name="map">Statistics</string>
    <string name="blogs">Blogs</string>
    <string name="diagnosis">Disease Diagnosis</string>
    <string name="please_upload_your_image">Please upload your image</string>
    <string name="predict">Predict</string>
    <string name="plus_icon">Plus Icon</string>
    <string name="disease_diagnosis_result_page_title">Diagnosis Result</string>
    <string name="back_button">Back Button</string>
    <string name="disease_name">Disease name</string>
    <string name="example_disease">Example Disease</string>
    <string name="solution">Solution</string>
    <string name="example_solution">Example Solution</string>
    <string name="done">Done</string>
    <string name="loaded_image">Loaded Image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="district_of_the_uploaded_coffee_leaves">District of the uploaded coffee leaves: </string>
    <string name="google_maps_key" translatable="false">AIzaSyBcTp1lcaSgjcK5XC3LRE8FKVotuEEhoCE</string>
</resources>