<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/fragment_disease_diagnosis_result"
    tools:context=".DiseaseDiagnosisResultFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutDiseaseDiagnosisResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:scaleType="fitCenter"
            android:background="@color/white"
            android:src="@drawable/back_arrow_icon"
            android:contentDescription="@string/back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/lbl_diagnosis_result_page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disease_diagnosis_result_page_title"
            android:layout_marginTop="48dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/upload_image_background"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@id/lbl_diagnosis_result_page_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/loaded_image" />

        <TextView
            android:id="@+id/lbl_disease_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:text="@string/disease_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_view" />

        <TextView
            android:id="@+id/txt_disease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:text="@string/example_disease"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_disease_name" />

        <TextView
            android:id="@+id/lbl_solution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/solution"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_disease" />

        <ProgressBar
            android:id="@+id/loadingSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_disease_name"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txt_solution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/example_solution"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_solution" />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/start_btn_bg"
            android:text="@string/done"
            android:textColor="#795548"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_solution" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>