<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/home_fragment"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/lbl_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee_plant_disease_diagnosis"
            android:layout_marginTop="48dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_home_banner"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:layout_marginStart="-2dp"
            android:src="@drawable/home_page_banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lbl_home_title"
            android:layout_marginTop="48dp"
            android:contentDescription="@string/img_home_banner" />

        <LinearLayout
            android:id="@+id/layout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/img_home_banner">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="48dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_scan"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/rounded_image_view"
                    android:clickable="true"
                    android:contentDescription="@string/img_scan_icon"
                    android:focusable="true"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/camera_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scan"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="24dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_map"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/rounded_image_view"
                    android:clickable="true"
                    android:contentDescription="@string/img_google_map_icon"
                    android:focusable="true"
                    android:src="@drawable/google_map" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/map"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_container">

            <ImageView
                android:id="@+id/img_blog"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/rounded_image_view"
                android:clickable="true"
                android:contentDescription="@string/img_blog_icon"
                android:focusable="true"
                android:src="@drawable/icons8_blog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blogs"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"/>

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>