<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/fragment_disase_diagnosis"
    tools:context=".DiseaseDiagnosisFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutDiseaseDiagnosis"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/lbl_diagnosis_page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/diagnosis"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_upload"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/plus_icon"
            android:layout_marginTop="48dp"
            android:background="@drawable/upload_image_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_diagnosis_page_title"
            android:contentDescription="@string/plus_icon" />

        <TextView
            android:id="@+id/lbl_plz_upload_ur_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_upload_your_image"
            android:layout_marginTop="24dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_upload" />

        <Button
            android:id="@+id/btn_predict"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/start_btn_bg"
            android:text="@string/predict"
            android:textColor="#795548"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:scaleType="fitCenter"
            android:background="@color/white"
            android:contentDescription="@string/back_button"
            android:src="@drawable/back_arrow_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbl_district"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/district_of_the_uploaded_coffee_leaves"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_plz_upload_ur_image" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:minHeight="48dp"
            android:spinnerMode="dropdown"
            android:gravity="center"
            android:background="@drawable/blue_outline"
            android:popupBackground="@drawable/blue_outline_white_background"
            tools:listitem="@layout/item_district"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_district" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>